manifest/oauth/oauth2_proxy-ingress.yaml
---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: oauth2-proxy
  namespace: chat
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chat.cn.openmaru-beom.local
  rules:
    - host: chat.cn.openmaru-beom.local
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180

# 인증받는 path가 하나일 경우 ingress 분기 후 기존 ingress annotations 추가
